--- a/conky.conf
+++ b/conky.conf
@@ -112,17 +112,17 @@ ${if_mounted /media/lacie25}lacie25
 ${voffset -15}${offset 100}${color3}${fs_used /media/lacie25}${color} / ${fs_size /media/lacie25}${alignr}${fs_used_perc /media/lacie25}%
 ${fs_bar /media/lacie25}
 ${endif}\
-${if_mounted /media/lacie35}lacie35
-${voffset -15}${offset 100}${color3}${fs_used /media/lacie35}${color} / ${fs_size /media/lacie35}${alignr}${fs_used_perc /media/lacie35}%
-${fs_bar /media/lacie35}
-${endif}\
-${if_mounted /media/toshiba}toshiba
-${voffset -15}${offset 100}${color3}${fs_used /media/toshiba}${color} / ${fs_size /media/toshiba}${alignr}${fs_used_perc /media/toshiba}%
-${fs_bar /media/toshiba}
-${endif}\
 ${if_mounted /media/wdultra}wdultra
 ${voffset -15}${offset 100}${color3}${fs_used /media/wdultra}${color} / ${fs_size /media/wdultra}${alignr}${fs_used_perc /media/wdultra}%
 ${fs_bar /media/wdultra}
+${endif}\
+${if_mounted /media/y0n5t03gthhg}y0n5t03gthhg
+${voffset -15}${offset 100}${color3}${fs_used /media/y0n5t03gthhg}${color} / ${fs_size /media/y0n5t03gthhg}${alignr}${fs_used_perc /media/y0n5t03gthhg}%
+${fs_bar /media/y0n5t03gthhg}
+${endif}\
+${if_mounted /media/y0pgt02othhg}y0pgt02othhg
+${voffset -15}${offset 100}${color3}${fs_used /media/y0pgt02othhg}${color} / ${fs_size /media/y0pgt02othhg}${alignr}${fs_used_perc /media/y0pgt02othhg}%
+${fs_bar /media/y0pgt02othhg}
 ${endif}\
 ${if_mounted /media/mp1}mp1
 ${voffset -15}${offset 100}${color3}${fs_used /media/mp1}${color} / ${fs_size /media/mp1}${alignr}${fs_used_perc /media/mp1}%
