gtk: change theme to Adwaita

--- a/gtk3/settings.ini
+++ b/gtk3/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Arc
+gtk-theme-name=Adwaita
 gtk-icon-theme-name=Numix-Circle
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=24
