--- a/gtk3/settings.ini
+++ b/gtk3/settings.ini
@@ -12,4 +12,5 @@ gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
+gtk-recent-files-enabled=0
 gtk-modules=canberra-gtk-module
