--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g set-titles-string "#W"
 set -g allow-rename on
 set -g base-index 1
 set -g renumber-windows on
+set -g focus-events on
 set -gw mode-keys vi
 
 # mouse support
