conky: fix temperature readings

--- a/conky.conf
+++ b/conky.conf
@@ -79,8 +79,8 @@ ${voffset -1}${color1}${top_mem name 4}
 ${voffset -15}${offset 150}${top_mem pid 4}${alignr}${top_mem mem 4}%${color}
 ${voffset 10}
 Uptime: ${alignr}${color1}${uptime}${color}
-Temperature: ${alignr}CPU: ${color3}${hwmon 1 temp 1}°C${color} / GPU: ${color3}${hwmon 3 temp 1}°C${color}
-${alignr}SSD: ${color3}${hwmon 0 temp 1}°C${color} / HDD: ${color3}${hwmon 2 temp 1}°C${color}
+Temperature: ${alignr}CPU: ${color3}${hwmon k10temp temp 1}°C${color} / GPU: ${color3}${hwmon amdgpu temp 1}°C${color}
+${alignr}SSD: ${color3}${hwmon nvme temp 1}°C${color} / HDD: ${color3}${hwmon 3 temp 1}°C${color}
 ${voffset -5}
 Gmail: ${alignr}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
