--- a/gtk4/settings.ini
+++ b/gtk4/settings.ini
@@ -3,7 +3,7 @@ gtk-theme-name=Adwaita
 gtk-icon-theme-name=Numix-Circle
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=24
-gtk-font-name=Ubuntu 11
+gtk-font-name=Noto Sans 11
 gtk-decoration-layout=menu:close
 gtk-dialogs-use-header=1
 gtk-xft-antialias=1
