mail: use OAuth 2.0 instead of plain passwords

--- a/msmtp.config
+++ b/msmtp.config
@@ -1,10 +1,9 @@
 defaults
 protocol smtp
 port 587
-auth on
 tls on
 tls_certcheck on
-tls_trust_file /etc/ssl/certs/ca-certificates.crt
+tls_trust_file system
 syslog LOG_MAIL
 logfile ~/.local/share/msmtp/msmtp.log
 
@@ -12,10 +11,14 @@ account gmail
 host smtp.gmail.com
 from $username$@gmail.com
 user $username$@gmail.com
+auth oauthbearer
+passwordeval oauth2get gmail $username$@gmail.com
 
 account outlook
 host smtp-mail.outlook.com
 from $username$@hotmail.com
 user $username$@hotmail.com
+auth xoauth2
+passwordeval oauth2get outlook $username$@hotmail.com
 
 account default : gmail
