mail: add Proton Mail account

--- a/conky.conf
+++ b/conky.conf
@@ -88,6 +88,9 @@ ${else}${color3}${new_mails $HOME/.mail/Gmail/Inbox} new mails${color}${endif}${
 Outlook: ${alignr}${if_match ${new_mails $HOME/.mail/Outlook/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/Outlook/Inbox} == 1}${color3}1 new mail${color}\
 ${else}${color3}${new_mails $HOME/.mail/Outlook/Inbox} new mails${color}${endif}${endif}
+Proton Mail: ${alignr}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 0}${color2}No new mail${color}\
+${else}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 1}${color3}1 new mail${color}\
+${else}${color3}${new_mails $HOME/.mail/ProtonMail/Inbox} new mails${color}${endif}${endif}
 ${if_up enp37s0}
 ${voffset 20}${downspeedgraph enp37s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp37s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
