--- a/msmtp.config
+++ b/msmtp.config
@@ -21,4 +21,13 @@ user $username$@hotmail.com
 auth xoauth2
 passwordeval oauth2get outlook $username$@hotmail.com
 
+account protonmail
+host 127.0.0.1
+port 1025
+auth on
+tls_starttls off
+tls_trust_file ~/.mail/.certs/cert.pem
+from $username$@protonmail.com
+user $username$@protonmail.com
+
 account default : gmail
