--- a/polybar.config
+++ b/polybar.config
@@ -10,8 +10,9 @@ red_bg = #75ae110c
 red_fg = #ccae110c
 
 
-[bar/panel]
+[bar/primary]
 override-redirect = true
+monitor = HDMI-A-0
 
 width = 100%
 height = 30
@@ -41,8 +42,37 @@ tray-background = ${colours.blue}
 wm-restack = bspwm
 
 
+[bar/secondary]
+override-redirect = true
+monitor = DisplayPort-0
+
+width = 100%
+height = 30
+offset-x = 0
+offset-y = 0
+
+background = ${colours.ddgray}
+foreground = ${colours.white}
+
+padding = 0
+module-margin = 0
+
+underline-size = 3
+underline-color = ${colours.dgray}
+
+font-0 = FontAwesome:size=10;2
+font-1 = DejaVuSansMono:size=10;2
+
+modules-left = bspwm
+modules-center =
+modules-right = keyboard sep1 volume sep2 date sep3 clock
+
+wm-restack = bspwm
+
+
 [module/bspwm]
 type = internal/bspwm
+pin-workspaces = true
 
 ws-icon-0 = home;
 ws-icon-1 = terminal;
