gbp: use sbuild; don't commit pristine-tar; better handle of versions

--- a/gbp.conf
+++ b/gbp.conf
@@ -1,16 +1,17 @@
 [DEFAULT]
-pristine-tar = true
-upstream-tag = %(version)s
+pristine-tar = false
+pristine-tar-commit = false
+upstream-tag = %(version%~%_)s
+debian-tag = debian/%(version%~%_)s
+submodules = true
 
 [buildpackage]
-builder = debuild -us -uc -I -i
+builder = sbuild -v -A --dist="unstable" --debbuildopts="-jauto"
 cleaner = fakeroot debian/rules clean
 compression = xz
 export-dir = ../build-area/
-pristine-tar-commit = true
 
 [import-orig]
-dch = false
 symlink-orig = false
 
 [pq]
