polybar: remove some deprecated options

--- a/polybar.config
+++ b/polybar.config
@@ -33,11 +33,7 @@ font-1 = DejaVuSansMono:size=10;2
 
 modules-left = bspwm mpd
 modules-center =
-modules-right = keyboard sep1 eth sep2 volume sep3 date sep4 clock
-
-tray-position = right
-tray-padding = 0
-tray-background = ${colours.blue}
+modules-right = keyboard sep1 eth sep2 volume sep3 date sep4 clock tray
 
 wm-restack = bspwm
 
@@ -154,8 +150,10 @@ toggle-off-foreground = ${colours.gray}
 
 [module/separator]
 type = custom/text
-content = "|"
-content-foreground = ${colours.gray}
+format = <label>
+format-foreground = ${colours.gray}
+
+label = "|"
 
 
 [module/keyboard]
@@ -242,5 +240,16 @@ format-prefix = "  "
 label = %time%
 
 time = %R %Z
+
+
+[module/tray]
+type = internal/tray
+
+format-padding = 3
+format-background = ${colours.blue}
+
+tray-padding = 0
+tray-spacing = 5
+tray-background = ${colours.blue}
 
 ; vim:ft=dosini
