change config files for the new pc

--- a/host-doru-areaba/polybar.ini
+++ b/host-doru-areaba/polybar.ini
@@ -10,9 +10,8 @@ red_bg = #75ae110c
 red_fg = #ccae110c
 
 
-[bar/primary]
+[bar/panel]
 override-redirect = true
-monitor = DisplayPort-3
 
 width = 100%
 height = 30
@@ -33,42 +32,13 @@ font-1 = DejaVuSansMono:size=10;2
 
 modules-left = bspwm mpd
 modules-center =
-modules-right = keyboard sep1 eth sep2 volume sep3 date sep4 clock tray
-
-wm-restack = bspwm
-
-
-[bar/secondary]
-override-redirect = true
-monitor = HDMI-A-1
-
-width = 100%
-height = 30
-offset-x = 0
-offset-y = 0
-
-background = ${colours.ddgray}
-foreground = ${colours.white}
-
-padding = 0
-module-margin = 0
-
-underline-size = 3
-underline-color = ${colours.dgray}
-
-font-0 = FontAwesome:size=10;2
-font-1 = DejaVuSansMono:size=10;2
-
-modules-left = bspwm
-modules-center =
-modules-right = keyboard sep1 volume sep2 date sep3 clock
+modules-right = keyboard sep1 wlan sep2 volume sep3 battery sep4 date sep5 clock tray
 
 wm-restack = bspwm
 
 
 [module/bspwm]
 type = internal/bspwm
-pin-workspaces = true
 
 ws-icon-0 = home;
 ws-icon-1 = terminal;
@@ -170,20 +140,20 @@ label-layout = %layout%
 inherit = module/separator
 
 
-[module/eth]
+[module/wlan]
 type = internal/network
-interface = enp7s0
+interface = wlp3s0
 interval = 10
 
 format-connected = <label-connected>
 format-connected-margin = 2
-format-connected-prefix = "  "
+format-connected-prefix = " "
 
-label-connected = %local_ip%
+label-connected = %essid%
 
 format-disconnected = <label-disconnected>
 format-disconnected-margin = 2
-format-disconnected-prefix = "  "
+format-disconnected-prefix = " "
 format-disconnected-foreground = ${colours.red_fg}
 
 label-disconnected = "Disconnected"
@@ -214,6 +184,32 @@ ramp-volume-2 = " "
 inherit = module/separator
 
 
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = AC0
+poll-interval = 30
+
+format-charging = <ramp-capacity> <label-charging>
+format-charging-padding = 2
+
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-padding = 2
+
+format-full = <ramp-capacity> <label-full>
+format-full-padding = 2
+
+ramp-capacity-0 = ""
+ramp-capacity-1 = ""
+ramp-capacity-2 = ""
+ramp-capacity-3 = ""
+ramp-capacity-4 = ""
+
+
+[module/sep4]
+inherit = module/separator
+
+
 [module/date]
 type = internal/date
 interval = 5
@@ -226,7 +222,7 @@ label = %date%
 date = %a, %b %d
 
 
-[module/sep4]
+[module/sep5]
 inherit = module/separator
 
 
