--- a/host-ellesmera/conky.conf
+++ b/host-ellesmera/conky.conf
@@ -43,23 +43,19 @@ conky.config = {
 conky.text = [[
 ${voffset 20}${cpugraph cpu1 40,140 0099cc 0099cc}${alignr}${cpugraph cpu5 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu1}%${font}
-${voffset -29}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 2}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu5}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu5}%${font}
 ${voffset 18}
 ${voffset 10}${cpugraph cpu2 40,140 0099cc 0099cc}${alignr}${cpugraph cpu6 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu2}%${font}
-${voffset -29}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 3}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu6}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu6}%${font}
 ${voffset 18}
 ${voffset 10}${cpugraph cpu3 40,140 0099cc 0099cc}${alignr}${cpugraph cpu7 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu3}%${font}
-${voffset -29}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 4}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu7}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu7}%${font}
 ${voffset 18}
 ${voffset 10}${cpugraph cpu4 40,140 0099cc 0099cc}${alignr}${cpugraph cpu8 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu4}%${font}
-${voffset -29}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 5}°C${font}
-${voffset -17}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu8}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu8}%${font}
 ${voffset 18}
 ${color4}${top name 1}
 ${voffset -17}${offset 150}${top pid 1}${alignr}${top cpu 1}%${color}
@@ -73,9 +69,6 @@ ${voffset 10}
 RAM:
 ${voffset -15}${offset 100}${color4}${mem}${color} / ${memmax}${alignr}${memperc}%
 ${membar}
-Swap:
-${voffset -15}${offset 100}${color3}${swap}${color} / ${swapmax}${alignr}${swapperc}%
-${swapbar}
 ${color4}${top_mem name 1}
 ${voffset -17}${offset 150}${top_mem pid 1}${alignr}${top_mem mem 1}%${color}
 ${voffset -1}${color3}${top_mem name 2}
@@ -86,8 +79,8 @@ ${voffset -1}${color1}${top_mem name 4}
 ${voffset -17}${offset 150}${top_mem pid 4}${alignr}${top_mem mem 4}%${color}
 ${voffset 10}
 Uptime: ${alignr}${color1}${uptime}${color}
-ACPI Temperature: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
-HDD Temperature: ${alignr}${color3}${hddtemp}°C${color}
+Temperature: ${alignr}CPU: ${color3}${hwmon k10temp temp 1}°C${color} / GPU: ${color3}${hwmon amdgpu temp 1}°C${color}
+${alignr}SSD: ${color3}${hwmon nvme temp 1}°C${color} / HDD: ${color3}${hwmon 3 temp 1}°C${color}
 ${voffset -5}
 Gmail: ${alignr}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
@@ -98,23 +91,13 @@ ${else}${color3}${new_mails $HOME/.mail/Outlook/Inbox} new mails${color}${endif}
 Proton Mail: ${alignr}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 1}${color3}1 new mail${color}\
 ${else}${color3}${new_mails $HOME/.mail/ProtonMail/Inbox} new mails${color}${endif}${endif}
-${if_up enp4s0}
-${voffset 20}${downspeedgraph enp4s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp4s0 35,140 669900 669900}
+${if_up enp37s0}
+${voffset 20}${downspeedgraph enp37s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp37s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
-${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp4s0}${font}
-${voffset -20}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
-${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp4s0}${font}
+${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp37s0}${font}
+${voffset -23}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
+${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp37s0}${font}
 ${voffset 30}\
-${endif}\
-${if_up wlp3s0}
-${voffset 20}${downspeedgraph wlp3s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph wlp3s0 35,140 669900 669900}
-${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
-${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf wlp3s0}${font}
-${voffset -20}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
-${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf wlp3s0}${font}
-${voffset 30}
-${color5}${wireless_essid wlp3s0}${color}
-${voffset -15}${offset 100}Signal: ${color1}${wireless_link_qual_perc wlp3s0}%${color}${alignr}Bitrate: ${color1}${wireless_bitrate wlp3s0}${color}
 ${endif}\
 ${voffset 10}
 debian
@@ -123,6 +106,10 @@ ${fs_bar /}
 ${if_mounted /boot}boot
 ${voffset -15}${offset 100}${color3}${fs_used /boot}${color} / ${fs_size /boot}${alignr}${fs_used_perc /boot}%
 ${fs_bar /boot}
+${endif}\
+${if_mounted /home/panagiotis/Videos}media
+${voffset -15}${offset 100}${color3}${fs_used /home/panagiotis/Videos}${color} / ${fs_size /home/panagiotis/Videos}${alignr}${fs_used_perc /home/panagiotis/Videos}%
+${fs_bar /home/panagiotis/Videos}
 ${endif}\
 ${if_mounted /media/lacie25}lacie25
 ${voffset -15}${offset 100}${color3}${fs_used /media/lacie25}${color} / ${fs_size /media/lacie25}${alignr}${fs_used_perc /media/lacie25}%
