--- a/gtk4/settings.ini
+++ b/gtk4/settings.ini
@@ -1,15 +1,17 @@
 [Settings]
-gtk-theme-name=Adwaita
-gtk-icon-theme-name=Numix-Circle
-gtk-cursor-theme-name=Adwaita
-gtk-cursor-theme-size=24
-gtk-font-name=Noto Sans 11
-gtk-decoration-layout=menu:close
-gtk-dialogs-use-header=1
-gtk-xft-antialias=1
-gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
-gtk-xft-rgba=rgb
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=0
-gtk-recent-files-enabled=0
+gtk-cursor-theme-name = Adwaita
+gtk-cursor-theme-size = 24
+gtk-decoration-layout = menu:close
+gtk-dialogs-use-header = true
+gtk-enable-event-sounds = true
+gtk-enable-input-feedback-sounds = false
+gtk-enable-primary-paste = false
+gtk-font-name = Noto Sans 11
+gtk-icon-theme-name = Numix-Circle
+gtk-recent-files-enabled = false
+gtk-recent-files-max-age = 0
+gtk-theme-name = Adwaita
+gtk-xft-antialias = 1
+gtk-xft-hinting = 1
+gtk-xft-hintstyle = hintslight
+gtk-xft-rgba = rgb
