--- a/conky.conf
+++ b/conky.conf
@@ -8,25 +8,30 @@ conky.config = {
 
 	own_window = true,
 	own_window_type = 'desktop',
+	own_window_transparent = false,
 	own_window_argb_visual = true,
 	own_window_argb_value = 100,
+	own_window_colour = '#000000',
 	own_window_title = 'conky',
-	minimum_width = 300,
-	maximum_width = 300,
 
 	alignment = 'top_left',
-	gap_x = 16,
+	minimum_height = 1050,
+	minimum_width = 300,
+	maximum_width = 300,
+	gap_x = 1936,
 	gap_y = 47,
 
 	border_inner_margin = 15,
 
 	draw_shades = false,
+	draw_outline = false,
+	draw_borders = false,
 	draw_graph_borders = false,
 
 	use_xft = true,
 	font = 'DejaVu Sans:size=10',
 
-	default_color = 'abb5c2',
+	default_color = '#abb5c2',
 
 --blue
 	color1 = '0099cc',
@@ -83,8 +88,7 @@ ${voffset -1}${color1}${top_mem name 4}
 ${voffset -17}${offset 150}${top_mem pid 4}${alignr}${top_mem mem 4}%${color}
 ${voffset 10}
 Uptime: ${alignr}${color1}${uptime}${color}
-Temperature: ${alignr}CPU: ${color3}${hwmon k10temp temp 3}°C${color}
-${alignr}iGPU: ${color3}${hwmon 3 temp 1}°C${color} / dGPU: ${color3}${hwmon 2 temp 1}°C${color}
+Temperature: ${alignr}CPU: ${color3}${hwmon k10temp temp 3}°C${color} / GPU: ${color3}${hwmon amdgpu temp 1}°C${color}
 ${alignr}SSD1: ${color3}${hwmon 1 temp 1}°C${color} / SSD2: ${color3}${hwmon 0 temp 1}°C${color}
 ${voffset -5}
 Gmail: ${alignr}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
@@ -96,12 +100,12 @@ ${else}${color3}${new_mails $HOME/.mail/Outlook/Inbox} new mails${color}${endif}
 Proton Mail: ${alignr}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 1}${color3}1 new mail${color}\
 ${else}${color3}${new_mails $HOME/.mail/ProtonMail/Inbox} new mails${color}${endif}${endif}
-${if_up enp110s0}
-${voffset 20}${downspeedgraph enp110s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp110s0 35,140 669900 669900}
+${if_up enp7s0}
+${voffset 20}${downspeedgraph enp7s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp7s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
-${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp110s0}${font}
+${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp7s0}${font}
 ${voffset -23}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
-${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp110s0}${font}
+${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp7s0}${font}
 ${voffset 30}\
 ${endif}\
 ${voffset 10}
