change window manager from bspwm to niri

--- a/conky.conf
+++ b/conky.conf
@@ -18,7 +18,7 @@ conky.config = {
 	minimum_height = 1050,
 	minimum_width = 300,
 	maximum_width = 300,
-	gap_x = 1936,
+	gap_x = 16,
 	gap_y = 47,
 
 	border_inner_margin = 15,
@@ -46,25 +46,21 @@ conky.config = {
 };
 
 conky.text = [[
-${voffset 7}${cpugraph cpu1 40,90 0099cc 0099cc}${offset 15}${cpugraph cpu5 40,90 0099cc 0099cc}${alignr}${cpugraph cpu9 40,90 0099cc 0099cc}
-${voffset -65}${font DejaVu Sans Mono:size=20}${cpu cpu1}%${font}
-${voffset -29}${offset 105}${font DejaVu Sans Mono:size=20}${cpu cpu5}%${font}
-${voffset -29}${offset 210}${font DejaVu Sans Mono:size=20}${cpu cpu9}%${font}
+${voffset 7}${cpugraph cpu1 40,140 0099cc 0099cc}${alignr}${cpugraph cpu5 40,140 0099cc 0099cc}
+${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu1}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu5}%${font}
 ${voffset 18}
-${voffset 10}${cpugraph cpu2 40,90 0099cc 0099cc}${offset 15}${cpugraph cpu6 40,90 0099cc 0099cc}${alignr}${cpugraph cpu10 40,90 0099cc 0099cc}
-${voffset -65}${font DejaVu Sans Mono:size=20}${cpu cpu2}%${font}
-${voffset -29}${offset 105}${font DejaVu Sans Mono:size=20}${cpu cpu6}%${font}
-${voffset -29}${offset 210}${font DejaVu Sans Mono:size=20}${cpu cpu10}%${font}
+${voffset 10}${cpugraph cpu2 40,140 0099cc 0099cc}${alignr}${cpugraph cpu6 40,140 0099cc 0099cc}
+${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu2}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu6}%${font}
 ${voffset 18}
-${voffset 10}${cpugraph cpu3 40,90 0099cc 0099cc}${offset 15}${cpugraph cpu7 40,90 0099cc 0099cc}${alignr}${cpugraph cpu11 40,90 0099cc 0099cc}
-${voffset -65}${font DejaVu Sans Mono:size=20}${cpu cpu3}%${font}
-${voffset -29}${offset 105}${font DejaVu Sans Mono:size=20}${cpu cpu7}%${font}
-${voffset -29}${offset 210}${font DejaVu Sans Mono:size=20}${cpu cpu11}%${font}
+${voffset 10}${cpugraph cpu3 40,140 0099cc 0099cc}${alignr}${cpugraph cpu7 40,140 0099cc 0099cc}
+${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu3}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu7}%${font}
 ${voffset 18}
-${voffset 10}${cpugraph cpu4 40,90 0099cc 0099cc}${offset 15}${cpugraph cpu8 40,90 0099cc 0099cc}${alignr}${cpugraph cpu12 40,90 0099cc 0099cc}
-${voffset -65}${font DejaVu Sans Mono:size=20}${cpu cpu4}%${font}
-${voffset -29}${offset 105}${font DejaVu Sans Mono:size=20}${cpu cpu8}%${font}
-${voffset -29}${offset 210}${font DejaVu Sans Mono:size=20}${cpu cpu12}%${font}
+${voffset 10}${cpugraph cpu4 40,140 0099cc 0099cc}${alignr}${cpugraph cpu8 40,140 0099cc 0099cc}
+${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu4}%${font}
+${voffset -29}${offset 175}${font DejaVu Sans Mono:size=20}${cpu cpu8}%${font}
 ${voffset 18}
 ${color4}${top name 1}
 ${voffset -17}${offset 150}${top pid 1}${alignr}${top cpu 1}%${color}
@@ -88,8 +84,8 @@ ${voffset -1}${color1}${top_mem name 4}
 ${voffset -17}${offset 150}${top_mem pid 4}${alignr}${top_mem mem 4}%${color}
 ${voffset 10}
 Uptime: ${alignr}${color1}${uptime}${color}
-Temperature: ${alignr}CPU: ${color3}${hwmon k10temp temp 3}°C${color} / GPU: ${color3}${hwmon amdgpu temp 1}°C${color}
-${alignr}SSD1: ${color3}${hwmon 1 temp 1}°C${color} / SSD2: ${color3}${hwmon 0 temp 1}°C${color}
+Temperature: ${alignr}CPU: ${color3}${hwmon k10temp temp 1}°C${color} / GPU: ${color3}${hwmon amdgpu temp 1}°C${color}
+${alignr}SSD: ${color3}${hwmon nvme temp 1}°C${color} / HDD: ${color3}${hwmon 3 temp 1}°C${color}
 ${voffset -5}
 Gmail: ${alignr}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
@@ -100,12 +96,12 @@ ${else}${color3}${new_mails $HOME/.mail/Outlook/Inbox} new mails${color}${endif}
 Proton Mail: ${alignr}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/ProtonMail/Inbox} == 1}${color3}1 new mail${color}\
 ${else}${color3}${new_mails $HOME/.mail/ProtonMail/Inbox} new mails${color}${endif}${endif}
-${if_up enp7s0}
-${voffset 20}${downspeedgraph enp7s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp7s0 35,140 669900 669900}
+${if_up enp37s0}
+${voffset 20}${downspeedgraph enp37s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp37s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
-${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp7s0}${font}
+${voffset -17}${offset 35}${font DejaVu Sans Mono:size=15}${downspeedf enp37s0}${font}
 ${voffset -23}${offset 165}${font DejaVu Sans Mono:size=10}${color2}Out${color}${font}
-${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp7s0}${font}
+${voffset -17}${offset 195}${font DejaVu Sans Mono:size=15}${upspeedf enp37s0}${font}
 ${voffset 30}\
 ${endif}\
 ${voffset 10}
