--- a/polybar.ini
+++ b/polybar.ini
@@ -10,9 +10,8 @@ red_bg = #75ae110c
 red_fg = #ccae110c
 
 
-[bar/primary]
+[bar/panel]
 override-redirect = true
-monitor = DisplayPort-2
 
 width = 100%
 height = 30
@@ -38,37 +37,8 @@ modules-right = keyboard sep1 eth sep2 volume sep3 date sep4 clock tray
 wm-restack = bspwm
 
 
-[bar/secondary]
-override-redirect = true
-monitor = HDMI-A-0
-
-width = 100%
-height = 30
-offset-x = 0
-offset-y = 0
-
-background = ${colours.ddgray}
-foreground = ${colours.white}
-
-padding = 0
-module-margin = 0
-
-underline-size = 3
-underline-color = ${colours.dgray}
-
-font-0 = FontAwesome:size=10;2
-font-1 = DejaVuSansMono:size=10;2
-
-modules-left = bspwm
-modules-center =
-modules-right = keyboard sep1 volume sep2 date sep3 clock
-
-wm-restack = bspwm
-
-
 [module/bspwm]
 type = internal/bspwm
-pin-workspaces = true
 
 ws-icon-0 = home;
 ws-icon-1 = terminal;
@@ -172,7 +142,7 @@ inherit = module/separator
 
 [module/eth]
 type = internal/network
-interface = enp7s0
+interface = enp37s0
 interval = 10
 
 format-connected = <label-connected>
