mpv: prefer wayland over x11

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,5 +1,6 @@
-hwdec=auto
-profile=gpu-hq
+vo=gpu
+gpu-context=waylandvk,wayland,x11egl
+hwdec=auto-safe
 sub-auto=fuzzy
 subs-fallback-forced=no
 no-osd-bar
