fontconfig: change a few fonts

--- a/fonts.conf
+++ b/fonts.conf
@@ -57,8 +57,9 @@
             <family>Noto Serif CJK HK</family>
         </prefer>
         <accept>
+            <family>Font Awesome 6 Pro</family>
+            <family>Font Awesome 6 Brands</family>
             <family>Font Awesome 5 Pro</family>
-            <family>Font Awesome 5 Free</family>
             <family>Font Awesome 5 Brands</family>
             <family>FontAwesome</family>
             <family>forkawesome</family>
@@ -68,6 +69,7 @@
     <alias binding="strong">
         <family>sans-serif</family>
         <prefer>
+            <family>Inter</family>
             <family>Open Sans</family>
             <family>Noto Color Emoji</family>
             <family>DejaVu Sans</family>
@@ -79,8 +81,9 @@
             <family>Noto Sans CJK HK</family>
         </prefer>
         <accept>
+            <family>Font Awesome 6 Pro</family>
+            <family>Font Awesome 6 Brands</family>
             <family>Font Awesome 5 Pro</family>
-            <family>Font Awesome 5 Free</family>
             <family>Font Awesome 5 Brands</family>
             <family>FontAwesome</family>
             <family>forkawesome</family>
@@ -91,8 +94,10 @@
         <family>monospace</family>
         <prefer>
             <family>DejaVu Sans Mono</family>
-            <family>Noto Mono</family>
+            <family>JetBrains Mono NL</family>
+            <family>IBM Plex Mono</family>
             <family>Noto Sans Mono</family>
+            <family>Noto Mono</family>
         </prefer>
         <accept>
             <family>PowerlineSymbols</family>
