--- a/swaylock.config
+++ b/swaylock.config
@@ -1,5 +1,35 @@
 ignore-empty-password
 show-failed-attempts
-hide-keyboard-layout
+disable-caps-lock-text
+indicator-caps-lock
 indicator-radius=100
+font-size=24
 color=191b21
+bs-hl-color=ae110c
+caps-lock-bs-hl-color=ae110c
+caps-lock-key-hl-color=58ae0cde
+inside-color=191b21
+inside-caps-lock-color=191b21
+inside-clear-color=e5a445
+inside-ver-color=1f62b0cc
+inside-wrong-color=ae110ccc
+key-hl-color=58ae0cde
+layout-bg-color=191b21
+layout-border-color=191b21
+layout-text-color=b6bcc8
+line-color=191b21
+line-caps-lock-color=191b21
+line-clear-color=191b21
+line-ver-color=191b21
+line-wrong-color=191b21
+ring-color=58ae0c75
+ring-caps-lock-color=e5a445de
+ring-clear-color=e5a445be
+ring-ver-color=1f62b075
+ring-wrong-color=ae110c75
+separator-color=191b21
+text-color=e5a445
+text-caps-lock-color=e5a445
+text-clear-color=191b21
+text-ver-color=191b21
+text-wrong-color=191b21
