--- a/notmuch.config
+++ b/notmuch.config
@@ -30,8 +30,8 @@ path=/home/panagiotis/.mail
 #
 [user]
 name=Panagiotis Kkolos
-primary_email=$username$@gmail.com
-other_email=$username$@hotmail.com;$username$@outlook.com;
+primary_email=$username$@hotmail.com
+other_email=$username$@gmail.com;$username$@outlook.com;$username$@protonmail.com;
 
 # Configuration for "notmuch new"
 #
@@ -49,7 +49,7 @@ other_email=$username$@hotmail.com;$username$@outlook.com;
 #
 [new]
 tags=unread;inbox;
-ignore=.mbsync;.uidvalidity;Trash;
+ignore=.certs;.mbsync;.uidvalidity;Trash;
 
 # Search configuration
 #
