--- a/alacritty.toml
+++ b/alacritty.toml
@@ -15,41 +15,59 @@ size = 10.0
 [font.normal]
 family = "DejaVu Sans Mono"
 
-[colors.normal]
-black = "#282c34"
-blue = "#4aa4ed"
-cyan = "#3fc7d9"
-green = "#97cb72"
-magenta = "#dd78c4"
-red = "#e05c67"
-white = "#b6bcc8"
-yellow = "#f2c97d"
-
-[colors.bright]
-black = "#474e5c"
-blue = "#7c879c"
-cyan = "#99a2b2"
-green = "#2c313a"
-magenta = "#b888e2"
-red = "#df8558"
-white = "#e2e4e9"
-yellow = "#353b45"
-
 [colors.primary]
-background = "#282c34"
 foreground = "#b6bcc8"
-
-[colors.footer_bar]
-background = "#b6bcc8"
-foreground = "#282c34"
-
-[colors.hints.end]
 background = "#282c34"
+
+[colors.search.focused_match]
+foreground = "#282c34"
+background = "#97cb72"
+
+[colors.search.matches]
 foreground = "#97cb72"
+background = "#282c34"
 
 [colors.hints.start]
-background = "#97cb72"
 foreground = "#282c34"
+background = "#97cb72"
+
+[colors.hints.end]
+foreground = "#97cb72"
+background = "#282c34"
+
+[colors.footer_bar]
+foreground = "#282c34"
+background = "#b6bcc8"
+
+[colors.normal]
+black   = "#282c34"
+red     = "#e05c67"
+green   = "#97cb72"
+yellow  = "#f2c97d"
+blue    = "#4aa4ed"
+magenta = "#dd78c4"
+cyan    = "#3fc7d9"
+white   = "#b6bcc8"
+
+[colors.bright]
+black   = "#474e5c"
+red     = "#e05c67"
+green   = "#97cb72"
+yellow  = "#f2c97d"
+blue    = "#4aa4ed"
+magenta = "#dd78c4"
+cyan    = "#3fc7d9"
+white   = "#e2e4e9"
+
+[colors]
+indexed_colors = [
+    { index = 16, color = "#2c313a" },
+    { index = 17, color = "#353b45" },
+    { index = 18, color = "#7c879c" },
+    { index = 19, color = "#99a2b2" },
+    { index = 20, color = "#df8558" },
+    { index = 21, color = "#b888e2" },
+]
 
 [bell]
 color = "#b6bcc8"
