--- a/tmux.conf
+++ b/tmux.conf
@@ -51,14 +51,14 @@ bind - split-window -v  # was delete-buffer
 
 # status format
 set -g status-interval 1
-set -g status-style bg=brightgreen,fg=default
+set -g status-style bg=colour16,fg=default
 set -g status-left-length 0
 set -g status-right " #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow]%Y-%m-%d %H:%M"
 set -g status-right-length 33
-set -g status-right-style bg=brightgreen,fg=green
+set -g status-right-style bg=colour16,fg=green
 
 set -gw window-status-format "#I #W"
-set -gw window-status-style bg=brightgreen
+set -gw window-status-style bg=colour16
 set -gw window-status-current-format " #I #F "
 set -gw window-status-current-style bg=black,fg=red,bold
 
