mpd: follow symlinks
We use .mpdignore file to remove duplicates from database

--- a/mpd.conf
+++ b/mpd.conf
@@ -131,7 +131,7 @@ follow_outside_symlinks "no"
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links inside of the configured music_directory.
 #
-follow_inside_symlinks  "no"
+follow_inside_symlinks  "yes"
 #
 ###############################################################################
 
